[package]
name = "pye-cli-2"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh = "1.3"
clap = { version = "4", features = ["derive", "env"] }
chrono = "0.4.41"
dialoguer = "0.11"
solana-account-decoder-client-types = "2.2.7"
solana-client = "2.2.7"
solana-commitment-config = "2.2.1"
solana-sdk = { version = "2.2.2", features = ["borsh"] }
solana-stake-program = { version = "2.2.7" }
solana-transaction-status-client-types= "2.2.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.15.1"
serde_json = "1.0"
thiserror = "2.0.12"
regex = "1.11.1" 
env_logger = "0.11"
log = "0.4.27"