[package]
name = "pye-cli-2"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh = "1.3"
clap = { version = "4", features = ["derive", "env"] }
dialoguer = "0.11"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
solana-instruction = "3.0.0"
solana-pubkey = "3.0.0"
solana-rpc-client = "3.0.8"
solana-rpc-client-api = "3.0.8"
solana-sdk = "3.0.0"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
solana-transaction-status-client-types= "2.2.7"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.15.1"
serde_json = "1.0"
tracing = "0.1.41"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.12"
regex = "1.11.1" 
env_logger = "0.11"
log = "0.4.27"